# game-and-watch-rs

./: Cargo.toml  gdbinit
.cargo/: config
src/: lib.rs
