[package]
name = "game-and-watch"
version = "0.1.0"
authors = ["Jennifer Wilcox <jennifer@nitori.org>"]
edition = "2018"

[dependencies]
cortex-m = "^0.6.0"
cortex-m-rt = "^0.6.13"
cortex-m-semihosting = "^0.3.7"
panic-semihosting = "^0.5.6"

[dependencies.stm32h7]
version = "0.12.1"
features = ["stm32h7b3", "rt"]

[[bin]]
name = "simple_test"
test = false
bench = false

[lib]
test = false
bench = false
